<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <me.smart.mylibrary.MaterialPreference.PreferenceCategory
        android:title="@string/general_settings">
        <me.smart.mylibrary.MaterialPreference.Preference
            android:key="@string/sync_note_key"
            android:title="@string/sync_note"
            android:summary="@string/sync_note_summary"/>

        <me.smart.mylibrary.MaterialPreference.SwitchPreference
            android:key="@string/right_hand_mode_key"
            android:summary="@string/right_hand_mode_summary"
            android:title="@string/right_hand_mode" />

        <me.smart.mylibrary.MaterialPreference.CheckBoxPreference
            android:key="@string/card_note_item_layout_key"
            android:title="@string/card_note_item_layout"
            android:summary="@string/card_note_item_layout_summary"/>

        <me.smart.mylibrary.MaterialPreference.Preference
            android:key="@string/clear_database_key"
            android:summary="@string/cleal_database_summary"
            android:title="@string/clear_database" />

        <me.smart.mylibrary.MaterialPreference.Preference
            android:key="@string/restore_defaultSettings_key"
            android:summary="@string/restore_defaultSettings_summary"
            android:title="@string/restore_defaultSettings" />

    </me.smart.mylibrary.MaterialPreference.PreferenceCategory>

    <me.smart.mylibrary.MaterialPreference.PreferenceCategory
        android:title="@string/other">
        <me.smart.mylibrary.MaterialPreference.Preference
            android:key="@string/advice_feedback_key"
            android:title="@string/advice_feedback" />
        <me.smart.mylibrary.MaterialPreference.Preference
            android:key="@string/give_favor_key"
            android:title="@string/give_favor" />
        <me.smart.mylibrary.MaterialPreference.Preference
            android:key="@string/show_help_key"
            android:title="@string/show_helpdoc" />

    </me.smart.mylibrary.MaterialPreference.PreferenceCategory>
</PreferenceScreen>